api/deploy/env/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME-healthcheck
  namespace: PROJECT_NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    zipkin-collector-host: collector.linkerd-jaeger
spec:
  tls:
    - hosts:
        - APP_DOMAIN
      secretName: APP_TLS_SECRET
  rules:
    - host: "APP_DOMAIN"
      http:
        paths:
          - pathType: Exact
            path: /healthz
            backend:
              service:
                name: APP_NAME
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME-manu
  namespace: PROJECT_NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    zipkin-collector-host: collector.linkerd-jaeger
spec:
  tls:
    - hosts:
        - APP_DOMAIN
      secretName: APP_TLS_SECRET
  rules:
    - host: "APP_DOMAIN"
      http:
        paths:
          - pathType: Exact
            path: /pulstats/stats
            backend:
              service:
                name: APP_NAME
                port:
                  number: 8000
          - pathType: Exact
            path: /pulstats/health_data
            backend:
              service:
                name: APP_NAME
                port:
                  number: 8000
          - pathType: Exact
            path: /manu/user_session
            backend:
              service:
                name: APP_NAME
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME-pulse
  namespace: PROJECT_NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    zipkin-collector-host: collector.linkerd-jaeger
spec:
  tls:
    - hosts:
        - APP_DOMAIN
      secretName: APP_TLS_SECRET
  rules:
    - host: "APP_DOMAIN"
      http:
        paths:
          - pathType: Exact
            path: /pulse/user_session
            backend:
              service:
                name: APP_NAME
                port:
                  number: 8000
